<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_back"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/id_title_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edExpData"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/id_exp_date_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:focusable="true"
        android:onClick="onClickSave"
        app:backgroundTint="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edExpData"
        app:maxImageSize="45dp"
        app:srcCompat="@drawable/ic_save"
        app:tint="@null"
        app:useCompatPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onEditEnable"
        app:backgroundTint="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edExpData"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_edit"
        app:tint="@null" />

    <EditText
        android:id="@+id/edQuantity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/id_quality_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTimeReceipt" />

    <EditText
        android:id="@+id/edType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/id_type_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edQuantity" />

    <EditText
        android:id="@+id/edFood"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/id_food_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edType" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/id_desc_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edFood" />

    <EditText
        android:id="@+id/edTimeReceipt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/id_time_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edExpData" />
</androidx.constraintlayout.widget.ConstraintLayout>